# etBenchBed

./: .gitignore  CMakeLists.txt  README.md
analysis/: perf_surface.C  plot_dram_bw_surface.C
host/: CMakeLists.txt  Constants.h.in  bench_registry.cpp  bench_registry.h  benchmark_runner.cpp  benchmark_runner.h  main.cpp  quant_utils.cpp  quant_utils.h
kernel/: CMakeLists.txt  diag.c  dram_bw.c  hang.c  mul_mat_f32.c  mul_mat_q8.c  overhead.c
kernel/include/: block_ops.h  et_blas.h  math_fp.h  platform.h  quants.h  tensor.h
mm_data/: README.md  mmq8_perf.csv  mmq8_perf_opt1.csv
